--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,5 +1,10 @@
 ${project.parent.artifactId}.title=LFHC Forms Module
-${project.parent.artifactId}.mytitle=My title
+${project.parent.artifactId}.fluidbalance.title=24h Fluid Balance
+
+${project.parent.artifactId}.fluidbalance.total=Total (ml)
+${project.parent.artifactId}.fluidbalance.lasttotal=Last 24h total (ml)
+${project.parent.artifactId}.fluidbalance.urineout=Avg urine out. (ml/h)
+${project.parent.artifactId}.fluidbalance.urineoutkg=Avg urine out./kg (ml/h/kg)
 
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
