Fluid balance indicators brought to Patient Summary widget. 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/FluidBalanceFragmentController.java 	modified:   omod/src/main/resources/apps/lfhcRegistration_app.json 	modified:   omod/src/main/webapp/fragments/fluidBalance.gsp 	modified:   api/src/main/resources/messages.properties Fixed the redirection issue on the Patient Registration Page and created an ad-hoc encounter type for registrations encounters. 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/EncounterTypesInitializer.java Latest concepts import CSV. 	modified:   api/src/main/resources/lfhcConcepts.csv Using joda-time. 	modified:   omod/pom.xml

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,10 +1,10 @@
 ${project.parent.artifactId}.title=LFHC Forms Module
 ${project.parent.artifactId}.fluidbalance.title=24h Fluid Balance
 
-${project.parent.artifactId}.fluidbalance.total=Current 24h total (ml)
-${project.parent.artifactId}.fluidbalance.lasttotal=Last 24h total (ml)
-${project.parent.artifactId}.fluidbalance.urineout=Avg urine out. (ml/h)
-${project.parent.artifactId}.fluidbalance.urineoutkg=Avg urine out. per kg (ml/h/kg)
+${project.parent.artifactId}.fluidbalance.total=Current 24h total
+${project.parent.artifactId}.fluidbalance.lasttotal=Last 24h total
+${project.parent.artifactId}.fluidbalance.urineout=Hourly urine out.
+${project.parent.artifactId}.fluidbalance.urineoutkg=Hourly urine out. per kg
 
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
