--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,10 +1,13 @@
 ${project.parent.artifactId}.title=LFHC Forms Module
+
 ${project.parent.artifactId}.fluidbalance.title=24h Fluid Balance
 
 ${project.parent.artifactId}.fluidbalance.total=Current 24h total
 ${project.parent.artifactId}.fluidbalance.lasttotal=Last 24h total
 ${project.parent.artifactId}.fluidbalance.urineout=Hourly urine out.
 ${project.parent.artifactId}.fluidbalance.urineoutkg=Hourly urine out. per kg
+
+${project.parent.artifactId}.pews.title=PEWS
 
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
