Augmenting the view with a details summary. 	modified:   omod/src/main/webapp/fragments/pewsScore.gsp Each set of boundaries is labelled through messages.properties. 	modified:   api/src/main/resources/messages.properties The PEWS score components are sent to the view through a map of PewsScoreFragmentController.Component instances. 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/PewsScoreFragmentController.java Changed the icon of the 24 fluid balance widget. 	modified:   omod/src/main/webapp/fragments/fluidBalance.gsp Added the 'label' and the 'isConfig' properties. 	modified:   omod/src/main/webapp/resources/pewsScore/boundaries.json Unit tests check that boundaries's labels are unique, check that the children's parent exist. 	modified:   omod/src/test/java/org/openmrs/module/lfhcforms/fragment/controller/PewsScoreFragmentControllerTest.java

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -7,7 +7,13 @@ ${project.parent.artifactId}.fluidbalance.lasttotal=Last 24h total
 ${project.parent.artifactId}.fluidbalance.urineout=Hourly urine out.
 ${project.parent.artifactId}.fluidbalance.urineoutkg=Hourly urine out. per kg
 
-${project.parent.artifactId}.pews.title=PEWS
+${project.parent.artifactId}.pewsscore.title=PEWS score
+${project.parent.artifactId}.pewsscore.summary.title=Components details
+${project.parent.artifactId}.pewsscore.components.label01=Respiratory rate
+${project.parent.artifactId}.pewsscore.components.label02=Respiratory distress
+${project.parent.artifactId}.pewsscore.components.label03=Heart rate
+${project.parent.artifactId}.pewsscore.components.label04=Loss of consciousness
+${project.parent.artifactId}.pewsscore.components.label05=Temperature
 
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
