--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -15,6 +15,12 @@ ${project.parent.artifactId}.pewsscore.components.label03=Heart rate
 ${project.parent.artifactId}.pewsscore.components.label04=Loss of consciousness
 ${project.parent.artifactId}.pewsscore.components.label05=Temperature
 
+${project.parent.artifactId}.pewsscore.action1=Continue monitoring
+${project.parent.artifactId}.pewsscore.action2=Expat nurse to review
+${project.parent.artifactId}.pewsscore.action3=Expat nurse and national doctor must review
+${project.parent.artifactId}.pewsscore.action4=Expat nurse and national doctor must review and inform expat doctor
+${project.parent.artifactId}.pewsscore.action5=Expat nurse and national doctor and expat doctor must review
+
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
 ${project.parent.artifactId}.Location.stateProvince=Province
