Creation of the lfhcforms.pewsTimeWindowInMin global property. The property is created via the activator. 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/activator/AdminConfigInitializer.java The controller checks that all obs have been recorded within the set time window, otherwise an error message is returned. 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/PewsScoreFragmentController.java Some hardcoded messages still remaining have been set for I18N. 	modified:   api/src/main/resources/messages.properties

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -21,6 +21,9 @@ ${project.parent.artifactId}.pewsscore.action3=Expat nurse and national doctor m
 ${project.parent.artifactId}.pewsscore.action4=Expat nurse and national doctor must review and inform expat doctor
 ${project.parent.artifactId}.pewsscore.action5=Expat nurse and national doctor and expat doctor must review
 
+${project.parent.artifactId}.pewsscore.error.obsmissing=`{0}` required for PEWS score has no obs recorded.
+${project.parent.artifactId}.pewsscore.error.timewindow=The obs involved in computing the PEWS score are spread on a time span of more than {0} minutes. The obs need to be measured again to establish a coherent PEWS score.
+
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
 ${project.parent.artifactId}.Location.stateProvince=Province
