--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -23,6 +23,7 @@ ${project.parent.artifactId}.pewsscore.action5=Expat nurse and national doctor a
 
 ${project.parent.artifactId}.pewsscore.error.obsmissing=`{0}` required for PEWS score has no obs recorded.
 ${project.parent.artifactId}.pewsscore.error.timewindow=The obs involved in computing the PEWS score are spread on a time span of more than {0} minutes. The obs need to be measured again to establish a coherent PEWS score.
+${project.parent.artifactId}.pewsscore.error.expiry=The oldest obs involved in computing the PEWS score has expired. For info the expiry time is set at  {0} minutes.
 
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
