Creating the form and i18n messages 	modified:   api/src/main/resources/messages.properties 	new file:   omod/src/main/webapp/resources/htmlforms/blood-transfusion.html

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -28,3 +28,6 @@ ${project.parent.artifactId}.pewsscore.error.expiry=The oldest obs involved in c
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
 ${project.parent.artifactId}.Location.stateProvince=Province
+
+
+${project.parent.artifactId}.bloodtransfusion.section.transfusion=Transfusion
