--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -28,3 +28,14 @@ ${project.parent.artifactId}.pewsscore.error.expiry=The oldest obs involved in c
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 
 ${project.parent.artifactId}.Location.stateProvince=Province
+
+${project.parent.artifactId}.nvobs.section.general=General
+${project.parent.artifactId}.nvobs.legend.color=Color
+${project.parent.artifactId}.nvobs.legend.skinTemperature=Skin Temperature
+${project.parent.artifactId}.nvobs.legend.movementExtermity=Movement of Extermity
+${project.parent.artifactId}.nvobs.legend.sensationExtermity=Sensation of Extermity
+${project.parent.artifactId}.nvobs.legend.swellingExtermity=Swelling of Extremity
+${project.parent.artifactId}.nvobs.legend.pulse=Pulses
+${project.parent.artifactId}.nvobs.legend.capillaryRefill=Capillary Refill
+${project.parent.artifactId}.nvobs.legend.pain=Pain /10
+${project.parent.artifactId}.nvobs.legend.comments=Comments
