--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ ${project.parent.artifactId}.pewsscore.components.label02=Respiratory distress
 ${project.parent.artifactId}.pewsscore.components.label03=Heart rate
 ${project.parent.artifactId}.pewsscore.components.label04=Loss of consciousness
 ${project.parent.artifactId}.pewsscore.components.label05=Temperature
+${project.parent.artifactId}.pewsscore.components.label06=Blood pressure
 
 ${project.parent.artifactId}.pewsscore.action1=Continue monitoring
 ${project.parent.artifactId}.pewsscore.action2=Expat nurse to review
