LFHCFORMS-88: Create a HFE form for editing Registration Encounters creation of ethnicity form 	new file:   ethnicity.html add i18n messages 	modified:   ../../../../../../api/src/main/resources/messages.properties update messages used in the registration app 	modified:   ../../../resources/apps/lfhcRegistration_app.json

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -27,5 +27,10 @@ ${project.parent.artifactId}.pewsscore.error.timewindow=The obs involved in comp
 ${project.parent.artifactId}.pewsscore.error.expiry=The oldest obs involved in computing the PEWS score has expired. For info the expiry time is set at  {0} minutes.
 
 ${project.parent.artifactId}.app.registerPatient.label=Register a patient
+${project.parent.artifactId}.app.registerPatient.section.ethnicity=Ethnicity
+${project.parent.artifactId}.app.registerPatient.ethnicity=Ethnicity
+${project.parent.artifactId}.app.registerPatient.language=Language spoken
+
+${project.parent.artifactId}.ethnicity.redirect=Redirecting to Edit mode...
 
 ${project.parent.artifactId}.Location.stateProvince=Province
