--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ ${project.parent.artifactId}.pewsscore.components.label03=Heart rate
 ${project.parent.artifactId}.pewsscore.components.label04=Loss of consciousness
 ${project.parent.artifactId}.pewsscore.components.label05=Temperature
 ${project.parent.artifactId}.pewsscore.components.label06=Blood pressure
+${project.parent.artifactId}.pewsscore.components.label07=Receiving O2
 
 ${project.parent.artifactId}.pewsscore.action1=Continue monitoring
 ${project.parent.artifactId}.pewsscore.action2=Expat nurse to review
