LFHCFORMS-62: Rewrite the Vitals & PEWS form Replace the 'loss of consciousness' by 'level of consciousness' and update JSON
	modified:   ../../../../../../api/src/main/resources/messages.properties
	modified:   vitals-pews.html
	modified:   ../pewsScore/boundaries.json

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -12,7 +12,7 @@ ${project.parent.artifactId}.pewsscore.summary.title=Components details
 ${project.parent.artifactId}.pewsscore.components.label01=Respiratory rate
 ${project.parent.artifactId}.pewsscore.components.label02=Respiratory distress
 ${project.parent.artifactId}.pewsscore.components.label03=Heart rate
-${project.parent.artifactId}.pewsscore.components.label04=Loss of consciousness
+${project.parent.artifactId}.pewsscore.components.label04=Conscious level
 ${project.parent.artifactId}.pewsscore.components.label05=Temperature
 ${project.parent.artifactId}.pewsscore.components.label06=Blood pressure
 ${project.parent.artifactId}.pewsscore.components.label07=Receiving O2
