LFHCDESK-21: Lab test order form Correct the content of Lab Test Order form Improve the display 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html 	modified:   omod/src/main/webapp/resources/scripts/handleViewMode.js

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -46,3 +46,23 @@ ${project.parent.artifactId}.nvobs.legend.pain=Pain /10
 ${project.parent.artifactId}.nvobs.legend.comments=Comments
 
 ${project.parent.artifactId}.ethnicity.redirect=Redirecting to Edit mode...
+
+${project.parent.artifactId}.labtestorder.section.labtestorder=Lab test order
+${project.parent.artifactId}.labtestorder.legend.completebloodcount=Complete Blood Count
+${project.parent.artifactId}.labtestorder.legend.periphearalsmear=Peripheral Smear
+${project.parent.artifactId}.labtestorder.legend.otherhematology=Other Hematology
+${project.parent.artifactId}.labtestorder.legend.routineurianalysis=Routine Urianalysis
+${project.parent.artifactId}.labtestorder.legend.chemistry=Chemistry
+${project.parent.artifactId}.labtestorder.legend.bloodgas=Blood Gas
+${project.parent.artifactId}.labtestorder.legend.coagulation=Coagulation
+${project.parent.artifactId}.labtestorder.legend.boneset=Bone Set
+${project.parent.artifactId}.labtestorder.legend.liverfunction=Liver Function
+${project.parent.artifactId}.labtestorder.legend.other=Other
+${project.parent.artifactId}.labtestorder.legend.rapidtest=Rapid Test
+${project.parent.artifactId}.labtestorder.legend.tbtest=TB tests
+${project.parent.artifactId}.labtestorder.legend.torch=Torch
+${project.parent.artifactId}.labtestorder.legend.lipidprofile=Lipid Profile
+${project.parent.artifactId}.labtestorder.legend.culture=Culture
+${project.parent.artifactId}.labtestorder.results=Results
+${project.parent.artifactId}.labtestorder.checkall=Check All
+${project.parent.artifactId}.labtestorder.uncheckall=Uncheck All
