--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -66,3 +66,5 @@ ${project.parent.artifactId}.labtestorder.legend.culture=Culture
 ${project.parent.artifactId}.labtestorder.results=Results
 ${project.parent.artifactId}.labtestorder.checkall=Check All
 ${project.parent.artifactId}.labtestorder.uncheckall=Uncheck All
+
+${project.parent.artifactId}.pastencounter.alert=Encounter date set to Visit Start Date
