LFHCDESK-76: New enter data on past visit should be listed on the top 	modified:   api/src/main/resources/messages.properties Correcting message spelling mistake
	modified:   omod/src/main/webapp/resources/htmlforms/ipd-nurse.html
Correcting the uiinclude wrong script name

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -68,7 +68,7 @@ ${project.parent.artifactId}.labtestorder.checkall=Check All
 ${project.parent.artifactId}.labtestorder.uncheckall=Uncheck All
 
 ${project.parent.artifactId}.pastencounter.alert=Encounter added on a past visit
-${project.parent.artifactId}.pastencounter.success=Encounter successfully set
+${project.parent.artifactId}.pastencounter.success=Encounter date successfully set
 ${project.parent.artifactId}.pastencounter.enterencounterdate=Please enter the Encounter date
 ${project.parent.artifactId}.pastencounter.editencounterdate=Edit encounter date
 ${project.parent.artifactId}.pastencounter.visitstartdate=Visit start date
