LFHCDESK-21: Lab test order form
	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html
Adding button to check/uncheck observation as per client requirements

TODO: Change the obsgroup concept number

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -64,5 +64,4 @@ ${project.parent.artifactId}.labtestorder.legend.torch=Torch
 ${project.parent.artifactId}.labtestorder.legend.lipidprofile=Lipid Profile
 ${project.parent.artifactId}.labtestorder.legend.culture=Culture
 ${project.parent.artifactId}.labtestorder.results=Results
-${project.parent.artifactId}.labtestorder.checkall=Check All
-${project.parent.artifactId}.labtestorder.uncheckall=Uncheck All
+${project.parent.artifactId}.labtestorder.checkuncheckall=Check/Uncheck All
