--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -67,8 +67,8 @@ ${project.parent.artifactId}.labtestorder.results=Results
 ${project.parent.artifactId}.labtestorder.checkall=Check All
 ${project.parent.artifactId}.labtestorder.uncheckall=Uncheck All
 
-${project.parent.artifactId}.pastencounter.alert=Encounter added on a past visit
-${project.parent.artifactId}.pastencounter.success=Encounter date successfully set
+${project.parent.artifactId}.pastencounter.alert=Visit is closed
+${project.parent.artifactId}.pastencounter.success=Encounter date set as visit end date
 ${project.parent.artifactId}.pastencounter.enterencounterdate=Please enter the Encounter date
 ${project.parent.artifactId}.pastencounter.editencounterdate=Edit encounter date
 ${project.parent.artifactId}.pastencounter.visitstartdate=Visit start date
