--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -65,3 +65,10 @@ ${project.parent.artifactId}.labtestorder.legend.lipidprofile=Lipid Profile
 ${project.parent.artifactId}.labtestorder.legend.culture=Culture
 ${project.parent.artifactId}.labtestorder.results=Results
 ${project.parent.artifactId}.labtestorder.checkuncheckall=Check/Uncheck All
+
+${project.parent.artifactId}.reporting.labels.report=Report
+${project.parent.artifactId}.reporting.labels.dataset=Data Set
+
+${project.parent.artifactId}.reports.basicdata.name=Basic Data
+${project.parent.artifactId}.reports.basicdata.key=-DateRange
+${project.parent.artifactId}.reports.basicdata.reportdesign=Excel Report Design
