--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -65,3 +65,17 @@ ${project.parent.artifactId}.labtestorder.legend.lipidprofile=Lipid Profile
 ${project.parent.artifactId}.labtestorder.legend.culture=Culture
 ${project.parent.artifactId}.labtestorder.results=Results
 ${project.parent.artifactId}.labtestorder.checkuncheckall=Check/Uncheck All
+
+${project.parent.artifactId}.button.add=Add
+${project.parent.artifactId}.button.remove=Remove
+${project.parent.artifactId}.button.seemore=See more
+
+${project.parent.artifactId}.diagnosticimaging.section.xrayorder=X-ray order
+${project.parent.artifactId}.diagnosticimaging.section.ultrasoundorder=Ultrasound order
+${project.parent.artifactId}.diagnosticimaging.selectxray=Select an X-ray from the automplete list or enter free text
+${project.parent.artifactId}.diagnosticimaging.selectultrasound=Select an Ultrasound from the drop-down list or enter free text
+${project.parent.artifactId}.diagnosticimaging.orotherxray=OR other X-ray
+${project.parent.artifactId}.diagnosticimaging.orotherultrasound=OR other Ultrasound
+${project.parent.artifactId}.diagnosticimaging.title=Xray/Ultrasound order
+${project.parent.artifactId}.diagnosticimaging.results=Results
+${project.parent.artifactId}.diagnosticimaging.comments=Comments
