LFHCDESK-43: Correct typo Changes to be committed: 	modified:   api/src/main/resources/messages.properties

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -72,7 +72,7 @@ ${project.parent.artifactId}.button.seemore=See more
 
 ${project.parent.artifactId}.diagnosticimaging.section.xrayorder=X-ray order
 ${project.parent.artifactId}.diagnosticimaging.section.ultrasoundorder=Ultrasound order
-${project.parent.artifactId}.diagnosticimaging.selectxray=Select an X-ray from the automplete list or enter free text
+${project.parent.artifactId}.diagnosticimaging.selectxray=Select an X-ray from the auto-complete list or enter free text
 ${project.parent.artifactId}.diagnosticimaging.selectultrasound=Select an Ultrasound from the drop-down list or enter free text
 ${project.parent.artifactId}.diagnosticimaging.orotherxray=OR other X-ray
 ${project.parent.artifactId}.diagnosticimaging.orotherultrasound=OR other Ultrasound
