LFHCFORMS-109: Display Registration Info (Editing only) 	modified:   api/src/main/resources/messages.properties 	new file:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/RegistrationInfoFragmentController.java 	new file:   omod/src/main/webapp/fragments/registrationInfo.gsp
Include fragment in form and change display style
	renamed:    omod/src/main/webapp/resources/htmlforms/ethnicity.html -> omod/src/main/webapp/resources/htmlforms/registration.html

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -31,6 +31,13 @@ ${project.parent.artifactId}.app.registerPatient.label=Register a patient
 ${project.parent.artifactId}.app.registerPatient.section.ethnicity=Ethnicity
 ${project.parent.artifactId}.app.registerPatient.ethnicity=Ethnicity
 ${project.parent.artifactId}.app.registerPatient.language=Language spoken
+${project.parent.artifactId}.app.registerPatient.father.legend=Father
+${project.parent.artifactId}.app.registerPatient.father.name=Father's name
+${project.parent.artifactId}.app.registerPatient.father.occupation=Father's occupation
+${project.parent.artifactId}.app.registerPatient.mother.legend=Mother
+${project.parent.artifactId}.app.registerPatient.mother.name=Mother's name
+${project.parent.artifactId}.app.registerPatient.insurance.legend=Insurance
+${project.parent.artifactId}.app.registerPatient.insurance.details=Insurance details
 
 ${project.parent.artifactId}.Location.stateProvince=Province
 
@@ -47,7 +54,8 @@ ${project.parent.artifactId}.nvobs.legend.capillaryRefill=Capillary Refill
 ${project.parent.artifactId}.nvobs.legend.pain=Pain /10
 ${project.parent.artifactId}.nvobs.legend.comments=Comments
 
-${project.parent.artifactId}.ethnicity.redirect=Redirecting to Edit mode...
+${project.parent.artifactId}.registrationinfo.redirect=Redirecting to Edit mode...
+${project.parent.artifactId}.registrationinfo.demographics=Demographics
 
 ${project.parent.artifactId}.labtestorder.section.labtestorder=Lab test order
 ${project.parent.artifactId}.labtestorder.legend.completebloodcount=Complete Blood Count
