LFHCFORMS-106: Refactoring + unit tests on the controller. Refactoring and use of the correct logger. 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/LatestWeightFragmentController.java The weight (underline) label now I18N'd. 	modified:   api/src/main/resources/messages.properties Cleaning up imports. 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/PewsScoreFragmentController.java 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/RegistrationInfoFragmentController.java Removed the units/ 	modified:   omod/src/main/webapp/fragments/latestWeight.gsp Unit tests. 	omod/src/test/java/org/openmrs/module/lfhcforms/fragment/controller/LatestWeightFragmentControllerTest.java

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -7,6 +7,8 @@ ${project.parent.artifactId}.fluidbalance.lasttotal=Last 24h total
 ${project.parent.artifactId}.fluidbalance.urineout=Hourly urine out.
 ${project.parent.artifactId}.fluidbalance.urineoutkg=Hourly urine out. per kg
 
+${project.parent.artifactId}.latestweight.patientWeightLabel=Latest weight
+
 ${project.parent.artifactId}.pewsscore.title=PEWS score
 ${project.parent.artifactId}.pewsscore.summary.title=Components details
 ${project.parent.artifactId}.pewsscore.components.label01=Respiratory rate
