LFHCFORMS-113: Add I18N messages 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/fragments/visit/visitWithLocationWidget.gsp

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -105,3 +105,5 @@ ${project.parent.artifactId}.diagnosticimaging.orotherultrasound=OR other Ultras
 ${project.parent.artifactId}.diagnosticimaging.title=Xray/Ultrasound order
 ${project.parent.artifactId}.diagnosticimaging.results=Results
 ${project.parent.artifactId}.diagnosticimaging.comments=Comments
+
+${project.parent.artifactId}.app.visit.recentvisits=Recent Visits
