--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -109,3 +109,6 @@ ${project.parent.artifactId}.diagnosticimaging.results=Results
 ${project.parent.artifactId}.diagnosticimaging.comments=Comments
 
 ${project.parent.artifactId}.app.visit.recentvisits=Recent Visits
+${project.parent.artifactId}.app.visit.changelocation.fail=Could not set the visit location
+${project.parent.artifactId}.app.visit.changelocation.success=Visit location successfully set
+${project.parent.artifactId}.app.visit.changelocation.label=Set Visit Location
