--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -111,7 +111,7 @@ ${project.parent.artifactId}.diagnosticimaging.comments=Comments
 ${project.parent.artifactId}.app.visit.recentvisits=Recent Visits
 ${project.parent.artifactId}.app.visit.changelocation.fail=Could not set the visit location
 ${project.parent.artifactId}.app.visit.changelocation.success=Visit is moved to {0}
-${project.parent.artifactId}.app.visit.changelocation.label=Set Visit Location
+${project.parent.artifactId}.app.visit.changelocation.label=Transfer Visit
 ${project.parent.artifactId}.app.visit.locationchanged.toast.success=You have been moved to {0}
 
 ${project.parent.artifactId}.app.visit.locationstart.warning=There is already active visit(s) for {0}
@@ -119,5 +119,5 @@ ${project.parent.artifactId}.app.visit.locationstart.warning.instructions=Please
 ${project.parent.artifactId}.app.visit.locationstart.instructions=Select a visit location
 ${project.parent.artifactId}.app.visit.locationchange.header=Select a visit location
 ${project.parent.artifactId}.app.visit.locationchange.title=Select a visit location
-${project.parent.artifactId}.app.visit.locationchange.instructions=Select a visit location
+${project.parent.artifactId}.app.visit.locationchange.instructions=Are you sure you want to move this visit ?
 
