LFHCFORMS-120: fragmnet to change Visit Type of existing visit 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/java/org/openmrs/module/lfhcforms/fragment/controller/visit/VisitTypeChangeFragmentController.java 	modified:   omod/src/main/webapp/fragments/visit/visitTypeChange.gsp 	deleted:    omod/src/main/webapp/resources/scripts/visit/changeVisitLocation.js 	new file:   omod/src/main/webapp/resources/scripts/visit/changeVisitType.js

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -109,15 +109,13 @@ ${project.parent.artifactId}.diagnosticimaging.results=Results
 ${project.parent.artifactId}.diagnosticimaging.comments=Comments
 
 ${project.parent.artifactId}.app.visit.recentvisits=Recent Visits
-${project.parent.artifactId}.app.visit.changelocation.fail=Could not set the visit location
-${project.parent.artifactId}.app.visit.changelocation.success=Visit is moved to {0}
-${project.parent.artifactId}.app.visit.changelocation.label=Transfer Visit
-${project.parent.artifactId}.app.visit.locationchanged.toast.success=You have been moved to {0}
-
-${project.parent.artifactId}.app.visit.locationstart.warning=There is already active visit(s) for {0}
-${project.parent.artifactId}.app.visit.locationstart.warning.instructions=Please end all visits before starting a new visit
-${project.parent.artifactId}.app.visit.locationstart.instructions=Select a visit location
+${project.parent.artifactId}.app.visit.visittype.start.warning=There is already active visit(s) for {0}
+${project.parent.artifactId}.app.visit.visittype.start.warning.instructions=Please end all visits before starting a new visit
+${project.parent.artifactId}.app.visit.visittype.start.instructions=Select a visit location
 ${project.parent.artifactId}.app.visit.locationchange.header=Select a visit location
 ${project.parent.artifactId}.app.visit.locationchange.title=Select a visit location
 ${project.parent.artifactId}.app.visit.locationchange.instructions=Are you sure you want to move this visit ?
-
+${project.parent.artifactId}.app.visit.locationchanged.toast.success=You have been moved to {0}
+${project.parent.artifactId}.app.visit.changelocation.fail=Could not set the visit location
+${project.parent.artifactId}.app.visit.changelocation.success=Visit is moved to {0}
+${project.parent.artifactId}.app.visit.changelocation.label=Transfer Visit
