LFHCFORMS-122: split getVisitColorAndShortName function 	modified:   api/src/main/java/org/openmrs/module/lfhcforms/utils/Utils.java 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/resources/apps/visitWithVisitType_app.json

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -119,3 +119,4 @@ ${project.parent.artifactId}.app.visit.visittype.change.toast.success=You have b
 ${project.parent.artifactId}.app.visit.visittype.change.fail=Could not set the visit type
 ${project.parent.artifactId}.app.visit.visittype.change.success=Visit is now {0} visit
 ${project.parent.artifactId}.app.visit.visittype.change.label=Transfer Visit
+${project.parent.artifactId}.app.visit.activevisits.visittype=Visit Type
