LFHCFORMS-122: Add filters in Active Visits app Retrieve visit types with colors and shortnames 	new file:   omod/src/main/java/org/openmrs/module/lfhcforms/page/controller/visit/ActiveVisitsPageController.java Add filtering functionality 	new file:   omod/src/main/webapp/pages/visit/activeVisits.gsp 	new file:   omod/src/main/webapp/resources/scripts/visit/filterTable.js
Improve display
	new file:   omod/src/main/webapp/resources/styles/visit/visitWithVisitType.css
Add page to App
	modified:   omod/src/main/resources/apps/visitWithVisitType_app.json
Add I18N messages
	modified:   api/src/main/resources/messages.properties

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -120,3 +120,4 @@ ${project.parent.artifactId}.app.visit.visittype.change.fail=Could not set the v
 ${project.parent.artifactId}.app.visit.visittype.change.success=Visit is now {0} visit
 ${project.parent.artifactId}.app.visit.visittype.change.label=Transfer Visit
 ${project.parent.artifactId}.app.visit.activevisits.visittype=Visit Type
+${project.parent.artifactId}.app.visit.activevisits.filters=Filters
