LFHCDESK-50: First commit to prepare the frame of the Form

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -76,6 +76,7 @@ ${project.parent.artifactId}.labtestorder.legend.torch=Torch
 ${project.parent.artifactId}.labtestorder.legend.lipidprofile=Lipid Profile
 ${project.parent.artifactId}.labtestorder.legend.culture=Culture
 ${project.parent.artifactId}.labtestorder.results=Results
+${project.parent.artifactId}.labtestorder.checkuncheckall=Check/Uncheck All
 
 ${project.parent.artifactId}.pastencounter.alert=Visit is closed
 ${project.parent.artifactId}.pastencounter.success=Encounter date set as visit end date
@@ -84,8 +85,6 @@ ${project.parent.artifactId}.pastencounter.editencounterdate=Edit encounter date
 ${project.parent.artifactId}.pastencounter.visitstartdate=Visit start date
 ${project.parent.artifactId}.pastencounter.visitenddate=Visit end date
 ${project.parent.artifactId}.pastencounter.encounterdate=Encounter date
-
-${project.parent.artifactId}.labtestorder.checkuncheckall=Check/Uncheck All
 
 ${project.parent.artifactId}.reporting.labels.report=Report
 ${project.parent.artifactId}.reporting.labels.dataset=Data Set
@@ -121,3 +120,13 @@ ${project.parent.artifactId}.app.visit.visittype.change.success=Visit is now {0}
 ${project.parent.artifactId}.app.visit.visittype.change.label=Transfer Visit
 ${project.parent.artifactId}.app.visit.activevisits.visittype=Visit Type
 ${project.parent.artifactId}.app.visit.activevisits.filters=Filters
+
+${project.parent.artifactId}.homecare-regular-visit.section.physical-assessment=Physical Assessment
+${project.parent.artifactId}.homecare-regular-visit.legend.comfort-level=Level of Comfort
+
+${project.parent.artifactId}.homecare-regular-visit.section.medication=Medication
+${project.parent.artifactId}.homecare-regular-visit.section.nutrition=Nutrition
+${project.parent.artifactId}.homecare-regular-visit.section.psycho-socio-financial-assessment=Psychological/socio-financial assessment
+${project.parent.artifactId}.homecare-regular-visit.section.nursing-implemenation=Nursing Implementation
+${project.parent.artifactId}.homecare-regular-visit.section.next-visit-plan=Next Visit Plan
+${project.parent.artifactId}.homecare-regular-visit.section.discharge-education=Discharge Education
