Typo in Lab Test Order form (urinalysis) 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/lab-test-order.html

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -63,7 +63,7 @@ ${project.parent.artifactId}.labtestorder.section.labtestorder=Lab test order
 ${project.parent.artifactId}.labtestorder.legend.completebloodcount=Complete Blood Count
 ${project.parent.artifactId}.labtestorder.legend.periphearalsmear=Peripheral Smear
 ${project.parent.artifactId}.labtestorder.legend.otherhematology=Other Hematology
-${project.parent.artifactId}.labtestorder.legend.routineurianalysis=Routine Urianalysis
+${project.parent.artifactId}.labtestorder.legend.routineurinalysis=Routine Urinalysis
 ${project.parent.artifactId}.labtestorder.legend.chemistry=Chemistry
 ${project.parent.artifactId}.labtestorder.legend.bloodgas=Blood Gas
 ${project.parent.artifactId}.labtestorder.legend.coagulation=Coagulation
