LFHCDESK-50: Adding Wong Baker faces and add i18n messages 	modified:   api/src/main/resources/messages.properties 	modified:   omod/src/main/webapp/resources/htmlforms/homecare-reg.html 	new file:   omod/src/main/webapp/resources/images/wong-baker-0.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-10.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-2.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-4.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-6.png 	new file:   omod/src/main/webapp/resources/images/wong-baker-8.png

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -121,12 +121,40 @@ ${project.parent.artifactId}.app.visit.visittype.change.label=Transfer Visit
 ${project.parent.artifactId}.app.visit.activevisits.visittype=Visit Type
 ${project.parent.artifactId}.app.visit.activevisits.filters=Filters
 
-${project.parent.artifactId}.homecare-regular-visit.section.physical-assessment=Physical Assessment
-${project.parent.artifactId}.homecare-regular-visit.legend.comfort-level=Level of Comfort
+${project.parent.artifactId}.homecare-regular-visit.section.physical-assessment=Physical assessment
+${project.parent.artifactId}.homecare-regular-visit.legend.comfort-level=Level of comfort
+${project.parent.artifactId}.homecare-regular-visit.legend.general=General
+${project.parent.artifactId}.homecare-regular-visit.legend.respiratory=Respiratory
+${project.parent.artifactId}.homecare-regular-visit.legend.cardiovascular=Cardiovascular
+${project.parent.artifactId}.homecare-regular-visit.legend.digestive=Digestive
+${project.parent.artifactId}.homecare-regular-visit.legend.other=Other
 
 ${project.parent.artifactId}.homecare-regular-visit.section.medication=Medication
+${project.parent.artifactId}.homecare-regular-visit.legend.hiv-tb-until=HIV/TB drug
+
 ${project.parent.artifactId}.homecare-regular-visit.section.nutrition=Nutrition
+
 ${project.parent.artifactId}.homecare-regular-visit.section.psycho-socio-financial-assessment=Psychological/socio-financial assessment
-${project.parent.artifactId}.homecare-regular-visit.section.nursing-implemenation=Nursing Implementation
+
+${project.parent.artifactId}.homecare-regular-visit.section.nursing-implementation=Nursing implementation
+${project.parent.artifactId}.homecare-regular-visit.legend.physical-exam-completed=Physical exam completed
+${project.parent.artifactId}.homecare-regular-visit.legend.physical-exam-comments=Physical exam comments
+${project.parent.artifactId}.homecare-regular-visit.legend.adherence-checked=Adherence checked
+${project.parent.artifactId}.homecare-regular-visit.legend.poor-adherence-reason=Reason for poor adherence
+${project.parent.artifactId}.homecare-regular-visit.legend.adherence-comments=Adherence comments
+${project.parent.artifactId}.homecare-regular-visit.legend.growth-measured=Growth measured and plotted
+${project.parent.artifactId}.homecare-regular-visit.legend.growth-comments=Growth comments
+${project.parent.artifactId}.homecare-regular-visit.legend.development-assessed=Development assessed
+${project.parent.artifactId}.homecare-regular-visit.legend.development-notes=Development Notes
+${project.parent.artifactId}.homecare-regular-visit.legend.food-support-provided=Food support provided
+${project.parent.artifactId}.homecare-regular-visit.legend.food-support-notes=Notes on Food Support
+${project.parent.artifactId}.homecare-regular-visit.legend.hygiene-supplies-provided=Hygiene supplies provided
+${project.parent.artifactId}.homecare-regular-visit.legend.hygien-supplies-notes=Notes on Hygiene Supplies
+
 ${project.parent.artifactId}.homecare-regular-visit.section.next-visit-plan=Next Visit Plan
+${project.parent.artifactId}.homecare-regular-visit.legend.next-visit-plan-date=Next Visit Date
+${project.parent.artifactId}.homecare-regular-visit.legend.goal-continued=Goal continued
+
 ${project.parent.artifactId}.homecare-regular-visit.section.discharge-education=Discharge Education
+
+
