LFHCDESK-50: Add more fields to the Homecare Pre-assessment form

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -128,14 +128,10 @@ ${project.parent.artifactId}.homecare-regular-visit.legend.respiratory=Respirato
 ${project.parent.artifactId}.homecare-regular-visit.legend.cardiovascular=Cardiovascular
 ${project.parent.artifactId}.homecare-regular-visit.legend.digestive=Digestive
 ${project.parent.artifactId}.homecare-regular-visit.legend.other=Other
-
 ${project.parent.artifactId}.homecare-regular-visit.section.medication=Medication
 ${project.parent.artifactId}.homecare-regular-visit.legend.hiv-tb-until=HIV/TB drug
-
 ${project.parent.artifactId}.homecare-regular-visit.section.nutrition=Nutrition
-
 ${project.parent.artifactId}.homecare-regular-visit.section.psycho-socio-financial-assessment=Psychological/socio-financial assessment
-
 ${project.parent.artifactId}.homecare-regular-visit.section.nursing-implementation=Nursing implementation
 ${project.parent.artifactId}.homecare-regular-visit.legend.physical-exam-completed=Physical exam completed
 ${project.parent.artifactId}.homecare-regular-visit.legend.physical-exam-comments=Physical exam comments
@@ -150,11 +146,96 @@ ${project.parent.artifactId}.homecare-regular-visit.legend.food-support-provided
 ${project.parent.artifactId}.homecare-regular-visit.legend.food-support-notes=Notes on Food Support
 ${project.parent.artifactId}.homecare-regular-visit.legend.hygiene-supplies-provided=Hygiene supplies provided
 ${project.parent.artifactId}.homecare-regular-visit.legend.hygien-supplies-notes=Notes on Hygiene Supplies
-
 ${project.parent.artifactId}.homecare-regular-visit.section.next-visit-plan=Next Visit Plan
 ${project.parent.artifactId}.homecare-regular-visit.legend.next-visit-plan-date=Next Visit Date
 ${project.parent.artifactId}.homecare-regular-visit.legend.goal-continued=Goal continued
-
 ${project.parent.artifactId}.homecare-regular-visit.section.discharge-education=Discharge Education
+
+${project.parent.artifactId}.homecare-pre-assessment.section.physical-condition=Physical condition
+${project.parent.artifactId}.homecare-pre-assessment.legend.diagnosis=Diagnosis
+${project.parent.artifactId}.homecare-pre-assessment.legend.diagnosis-options=Options
+${project.parent.artifactId}.homecare-pre-assessment.legend.diagnosis-classification=Diagnosis classification
+${project.parent.artifactId}.homecare-pre-assessment.legend.medications=Medications
+${project.parent.artifactId}.homecare-pre-assessment.legend.adherence-checked=Adherence
+${project.parent.artifactId}.homecare-pre-assessment.legend.poor-adherence-reason=Reason for poor adherence for patient or family
+${project.parent.artifactId}.homecare-pre-assessment.legend.physiotherapy=Need physiotherapy
+${project.parent.artifactId}.homecare-pre-assessment.legend.physiotherapy-comments=Physiotherapy Comments
+
+${project.parent.artifactId}.homecare-pre-assessment.legend.intervention=Need intervention?
+
+${project.parent.artifactId}.homecare-pre-assessment.section.nutrition=Nutrition
+${project.parent.artifactId}.homecare-pre-assessment.legend.diet=Is the patient on a full diet for age?
+${project.parent.artifactId}.homecare-pre-assessment.legend.rice=Rice
+${project.parent.artifactId}.homecare-pre-assessment.legend.meat=Meat
+${project.parent.artifactId}.homecare-pre-assessment.legend.fish=Fish
+${project.parent.artifactId}.homecare-pre-assessment.legend.vegetables=Vegetables
+${project.parent.artifactId}.homecare-pre-assessment.legend.fruits=Fruits
+${project.parent.artifactId}.homecare-pre-assessment.legend.preference=Preference
+${project.parent.artifactId}.homecare-pre-assessment.legend.snack=Snack
+${project.parent.artifactId}.homecare-pre-assessment.legend.eating-frequency=How many times does child eat per day?
+${project.parent.artifactId}.homecare-pre-assessment.legend.cook=Who cooks for the patient?
+${project.parent.artifactId}.homecare-pre-assessment.legend.nutrition-comments=Nutrition comments
+
+${project.parent.artifactId}.homecare-pre-assessment.section.hygiene=Hygiene
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-primary=Primary source of water
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-nampapa=Nam papa (home plumbing)
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-well=Water Well
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-well-type=What type of well?
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-pump=Pump
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-other=Other sources of water used
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-distance=Distance to water source
+${project.parent.artifactId}.homecare-pre-assessment.legend.water-treatment=Type of drinking water treatment
+${project.parent.artifactId}.homecare-pre-assessment.legend.latrine=Latrine
+${project.parent.artifactId}.homecare-pre-assessment.legend.ustensils=Utensil (pots/pans/etc)
+${project.parent.artifactId}.homecare-pre-assessment.legend.hygiene-comments=Hygiene comments
+
+${project.parent.artifactId}.homecare-pre-assessment.section.family=Family
+${project.parent.artifactId}.homecare-pre-assessment.legend.guardian=Guardian
+${project.parent.artifactId}.homecare-pre-assessment.legend.daytime-care-giver=Day-time main care giver
+${project.parent.artifactId}.homecare-pre-assessment.legend.nighttime-care-giver=Night-time main care giver
+${project.parent.artifactId}.homecare-pre-assessment.legend.family-comments=Family situation comments
+
+${project.parent.artifactId}.homecare-pre-assessment.section.primary-health-care=Primary health care
+${project.parent.artifactId}.homecare-pre-assessment.legend.provider=Who is the primary health care provider for the family?
+${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-center=Nearest Health Care Centre
+${project.parent.artifactId}.homecare-pre-assessment.legend.nearest-hospital=Nearest District Hospital
+${project.parent.artifactId}.homecare-pre-assessment.legend.insurance=Health insurance
+${project.parent.artifactId}.homecare-pre-assessment.legend.go-to-health-center=Does the family go to health centre
+${project.parent.artifactId}.homecare-pre-assessment.legend.phc-comments=PHC comments
+
+${project.parent.artifactId}.homecare-pre-assessment.section.access=Access
+${project.parent.artifactId}.homecare-pre-assessment.legend.distance-lfhc=Distance from LFHC
+${project.parent.artifactId}.homecare-pre-assessment.legend.time-lfhc=Time needed to reach LFHC
+${project.parent.artifactId}.homecare-pre-assessment.legend.time-by-car=By car
+${project.parent.artifactId}.homecare-pre-assessment.legend.time-by-moto=By motorbike
+${project.parent.artifactId}.homecare-pre-assessment.legend.time-by-foot=By foot
+${project.parent.artifactId}.homecare-pre-assessment.legend.time-by-bus=By public transport
+${project.parent.artifactId}.homecare-pre-assessment.legend.road-conditions=Road condition
+${project.parent.artifactId}.homecare-pre-assessment.legend.access-comments=Access comments
+
+${project.parent.artifactId}.homecare-pre-assessment.section.house-and-environment=House and Environment
+${project.parent.artifactId}.homecare-pre-assessment.legend.house-type=Type
+${project.parent.artifactId}.homecare-pre-assessment.legend.house-ownership=House ownership
+${project.parent.artifactId}.homecare-pre-assessment.legend.house-own=Does the patient owns the house?
+${project.parent.artifactId}.homecare-pre-assessment.legend.house-rent=Does the patient rent the house?
+${project.parent.artifactId}.homecare-pre-assessment.legend.number-rooms=Number of rooms
+${project.parent.artifactId}.homecare-pre-assessment.legend.electricity=Electricity
+${project.parent.artifactId}.homecare-pre-assessment.legend.neighbours=Neighbours
+${project.parent.artifactId}.homecare-pre-assessment.legend.planting-space=Space for planting
+${project.parent.artifactId}.homecare-pre-assessment.legend.number-bednets=Number of functioning bednets in house
+${project.parent.artifactId}.homecare-pre-assessment.legend.house-comments=House and environment comments
+
+${project.parent.artifactId}.homecare-pre-assessment.section.education=Education
+${project.parent.artifactId}.homecare-pre-assessment.legend.school=Currently in school ?
+${project.parent.artifactId}.homecare-pre-assessment.legend.school-years-completed=Years of School completed
+${project.parent.artifactId}.homecare-pre-assessment.legend.not-in-school-reason=Why not in school?
+${project.parent.artifactId}.homecare-pre-assessment.legend.number-siblings-in-school=Number of other siblings attending school
+${project.parent.artifactId}.homecare-pre-assessment.legend.education-comments=Education comments
+
+${project.parent.artifactId}.homecare-pre-assessment.section.other=Other
+${project.parent.artifactId}.homecare-pre-assessment.legend.lfhc-financial-score=LFHC financial score
+${project.parent.artifactId}.homecare-pre-assessment.legend.government-financial-score=Government financial score
+${project.parent.artifactId}.homecare-pre-assessment.legend.cultural-beliefs=Cultural beliefs
+${project.parent.artifactId}.homecare-pre-assessment.legend.other-comments=Other comments
 
 
