LFHCDESK-50: Add more i18n messages

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -226,16 +226,16 @@ ${project.parent.artifactId}.homecare-pre-assessment.legend.number-bednets=Numbe
 ${project.parent.artifactId}.homecare-pre-assessment.legend.house-comments=House and environment comments
 
 ${project.parent.artifactId}.homecare-pre-assessment.section.education=Education
-${project.parent.artifactId}.homecare-pre-assessment.legend.school=Currently in school ?
+${project.parent.artifactId}.homecare-pre-assessment.legend.school=Currently in school?
 ${project.parent.artifactId}.homecare-pre-assessment.legend.school-years-completed=Years of School completed
 ${project.parent.artifactId}.homecare-pre-assessment.legend.not-in-school-reason=Why not in school?
 ${project.parent.artifactId}.homecare-pre-assessment.legend.number-siblings-in-school=Number of other siblings attending school
 ${project.parent.artifactId}.homecare-pre-assessment.legend.education-comments=Education comments
 
-${project.parent.artifactId}.homecare-pre-assessment.section.other=Other
+${project.parent.artifactId}.homecare-pre-assessment.section.others=Others
 ${project.parent.artifactId}.homecare-pre-assessment.legend.lfhc-financial-score=LFHC financial score
 ${project.parent.artifactId}.homecare-pre-assessment.legend.government-financial-score=Government financial score
 ${project.parent.artifactId}.homecare-pre-assessment.legend.cultural-beliefs=Cultural beliefs
-${project.parent.artifactId}.homecare-pre-assessment.legend.other-comments=Other comments
+${project.parent.artifactId}.homecare-pre-assessment.legend.others-comments=Other comments
 
 
